8248112: array index out of bound in FileMapInfo::check_paths

Check runtime classpath lengths after calling create_path_array().

Reviewed-by: iklam, minqi