test/hotspot/jtreg/runtime/cds/appcds/BootClassPathMismatch.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,6 +28,7 @@
  * @requires vm.cds
  * @library /test/lib
  * @compile test-classes/Hello.java
+ * @compile test-classes/C2.java
  * @run driver BootClassPathMismatch
  */
 
@@ -61,6 +62,7 @@ public class BootClassPathMismatch {
             test.testBootClassPathMatchWithAppend();
         }
         test.testBootClassPathMatch();
+        test.testBootClassPathMismatchTwoJars();
     }
 
     /* Archive contains boot classes only, with Hello class on -Xbootclasspath/a path.
@@ -212,6 +214,25 @@ public class BootClassPathMismatch {
         String newJar = TestCommon.composeRelPath(appJar);
         TestCommon.run(
                 "-cp", newJar, "-Xbootclasspath/a:" + newJar, "Hello")
+            .assertAbnormalExit(mismatchMessage);
+    }
+
+    /* Archive contains app classes, with 2 jars in bootclasspath at dump time.
+     *
+     * Error should be detected if:
+     * dump time: -Xbootclasspath/a:hello.jar:jar2.jar
+     * run-time : -Xbootclasspath/a:hello.jar:jar2.jarx
+     * Note: the second jar (jar2.jarx) specified for run-time doesn't exist.
+     */
+    public void testBootClassPathMismatchTwoJars() throws Exception {
+        String appJar = JarBuilder.getOrCreateHelloJar();
+        String jar2 = ClassFileInstaller.writeJar("jar2.jar", "pkg/C2");
+        String jars = appJar + File.pathSeparator + jar2;
+        String appClasses[] = {"Hello", "pkg/C2"};
+        TestCommon.dump(
+            appJar, appClasses, "-Xbootclasspath/a:" + jars);
+        TestCommon.run(
+                "-cp", appJar, "-Xbootclasspath/a:" + jars + "x", "Hello")
             .assertAbnormalExit(mismatchMessage);
     }
 
